--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "compression": "~1.7.1",
     "express": "~4.16.2",
     "he": "~1.1.1",
+    "prerender-memory-cache": "^1.0.2",
     "valid-url": "~1.0.9"
   },
   "devDependencies": {
